// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormattedDate render German format 1`] = `
<React.Fragment>
  31.12.1999, 23:59:59 UTC
</React.Fragment>
`;

exports[`FormattedDate render end of last millennium 1`] = `
<React.Fragment>
  12/31/1999, 11:59:59 PM UTC
</React.Fragment>
`;

exports[`FormattedDate render start of this millennium 1`] = `
<React.Fragment>
  1/1/2000, 12:00:00 AM UTC
</React.Fragment>
`;
